# MenteViva

./: .gitignore  CMakeLists.txt  README.md  buzzer.c  display.c  input.c  led_matrix.c  lwipopts.h  main.c  menteviva.h  wifi.c
docs/problemas/: oled-bitdoglab.md
lib/neopixel_pio/: neopixel_pio.c
lib/ssd1306/inc/: ssd1306.c
